--- a/UnifiedTaxonomy.css
+++ b/UnifiedTaxonomy.css
@@ -1,25 +1,20 @@
-.node circle 
-{
+.node circle {
   fill: #999;
 }
 
-.node text 
-{
+.node text {
   font: 9px sans-serif;
 }
 
-.node--internal circle 
-{
+.node--internal circle {
   fill: #555;
 }
 
-.node--internal text 
-{
+.node--internal text {
   text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
 }
 
-.link 
-{
+.link {
   fill: none;
   stroke: #555;
   stroke-opacity: 0.4;
